--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,7 +1,9 @@
-$dark-bg: #2b303b;
-
-$lighter-bg: #323742;
+$dark-bg2: #2b303b;
+$dark-bg: #252731;
+$lighter-bg2: #323742;
+$lighter-bg: #292e39;
 
 $rest-bg: #e4e4e8;
 
-$jingil: 0.13em solid lightskyblue;
+$accent: #87cefa;
+$jingil: 0.13em solid $accent;
