--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,13 +1,20 @@
 header {
   display: flex;
   justify-content: space-between;
-  ul {
-    display: flex;
-    justify-content: space-evenly;
-    li {
-      padding: 0 0.3em;
-      a {
-        cursor: pointer;
+  strong {
+    padding: 0 1em;
+  }
+  nav {
+    // float: right;
+    ul {
+      display: flex;
+      justify-content: space-evenly;
+      li {
+        padding: 0 0.3em;
+
+        a {
+          cursor: pointer;
+        }
       }
     }
   }
