--- a/src/styles/jumbo.scss
+++ b/src/styles/jumbo.scss
@@ -2,7 +2,7 @@
 .jumbo {
   img.avatar {
     border-radius: 50%;
-    border: .4em solid lightseagreen;
+    border: 0.4em solid $accent;
   }
   &.contentWrapper {
     display: flex;
@@ -16,20 +16,28 @@
     h4 {
       margin-top: 1em;
     }
+    span {
+      margin-top: 0.5em;
+      svg {
+        align-self: center;
+        margin: 0 0.5em;
+      }
+    }
     * {
-      display: block;
-      text-align: center;
-      margin: 0 auto;
+      display: flex;
+      justify-content: center;
+      // text-align: center;
+      // margin: 0 auto;
     }
   }
   .jumbo_right {
     width: 100%;
     align-self: center;
-    padding-left: 10em;
+    padding-left: 10%;
     h3 {
+      text-transform: capitalize;
       position: relative;
       font-size: 3em;
-      text-transform: capitalize;
       &:before {
         content: " ";
         width: 1.1em;
