--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -38,7 +38,7 @@ ul {
   section {
     // height: 250px;
     margin: 10px 0px;
-    padding: 20px 50px;
+    padding: 1em 5em 3em 5em;
     background-color: #f2f2f4;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.08);
     &:nth-child(1) {
@@ -47,7 +47,7 @@ ul {
     h1 {
       font-size: 2em;
       position: relative;
-      margin: 1em 0.5em;
+      margin: 1em 0.5em 1em 0;
       &:after {
         content: " ";
         width: 1.1em;
